<resources>
    <string name="app_name">PulseUp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heading_app_start">Your way to a healthy body and strong mind</string>
    <string name="test_lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit,\n sed do eiusmod tempor incididunt ut labore et dolore\n magna aliqua.</string>
    <string name="btn_continue">Continue</string>
    <string name="goal_lose_weight">Lose weight</string>
    <string name="goal_gain_weight">Gain weight</string>
    <string name="goal_muscle_mass_gain">Muscle Mass Gain</string>
    <string name="goal_shape_body">Shape Body</string>
    <string name="goal_others">Others</string>
    <string name="level_beginner">Beginner</string>
    <string name="btn_start">Start</string>
    <string name="heading_fill_your_profile">Fill Your Profile</string>
    <string name="full_name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="hint_your_nickname">Your nickname</string>
    <string name="hint_your_full_name">Your full name</string>
</resources>