<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.profile.EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_menu"
        android:backgroundTint="@color/black_main">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:id="@+id/viewLine"
            android:background="@drawable/bg_button_google"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="50dp"
            android:layout_height="4dp"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupInputFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids=
                "tvLableName,tvLableNickName,tvLableWeight,tvLableHeight,tvLableLevel,
                 nameTextInputLayout,nickNameTextInputLayout,weightTextInputLayout,
                 heightTextInputLayout,levelTextInputLayout"/>

        <TextView
            android:id="@+id/tvHeadingEdit"
            style="@style/MyTextAppearance.BodyBold1.White"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Edit Profile"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewLine" />

        <TextView
            android:id="@+id/tvHintEdit"
            style="@style/MyTextAppearance.Body1.White"
            android:paddingHorizontal="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter a new parameter or leave it blank to keep the old one."
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeadingEdit" />

        <TextView
            android:id="@+id/tvLableName"
            style="@style/MyTextAppearance.BodyBold1.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/full_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHintEdit" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            style="@style/InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvLableName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:hint="@string/hint_your_full_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvLableNickName"
            style="@style/MyTextAppearance.BodyBold1.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/nickname"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nickNameTextInputLayout"
            style="@style/InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvLableNickName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nickNameEditText"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:hint="@string/hint_your_nickname"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvLableWeight"
            style="@style/MyTextAppearance.BodyBold1.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="Weight"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nickNameTextInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weightTextInputLayout"
            style="@style/InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvLableWeight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weightEditText"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:hint="@string/hint_your_weight"
                android:imeOptions="actionNext"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvLableHeight"
            style="@style/MyTextAppearance.BodyBold1.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="Height"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weightTextInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/heightTextInputLayout"
            style="@style/InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvLableHeight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/heightEditText"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:hint="@string/hint_your_weight"
                android:imeOptions="actionNext"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvLableLevel"
            style="@style/MyTextAppearance.BodyBold1.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="Activity Level"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heightTextInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/levelTextInputLayout"
            style="@style/InputLayout.ExposedDropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:hintEnabled="false"
            android:textColorHint="@color/black_main"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvLableLevel">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTV"
                style="@style/InputEditText"

                android:hint="Your activity level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnUpdateProfile"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:background="@drawable/bg_btn_logout"
            app:backgroundTint="@null"
            android:text="Update Profile"
            android:textAppearance="@style/MyTextAppearance.BodyBold1"
            android:textColor="@color/black_main"
            app:layout_constraintTop_toBottomOf="@id/levelTextInputLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>